--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.3.1
-before_install: gem install bundler -v 1.12.5
+- 2.3.7
+- 2.4.4
+- 2.5.1
+before_install:
+- gem update --system
+- gem install bundler
