--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 sudo: false
 language: ruby
 rvm:
-- 2.3.8
-- 2.4.9
-- 2.5.7
-- 2.6.5
+- 2.4.10
+- 2.5.8
+- 2.6.6
+- 2.7.1
 before_install:
 - gem update --system
-- gem install bundler
+- gem install bundler -v '1.17.3'
+install: bundle _1.17.3_ install --jobs=3 --retry=3
